# my_chat

./: CMakeCache.txt  CMakeLists.txt  Makefile  clcon.cpp  clcon.h  client.cpp  cmake_install.cmake  main.cpp  minclude.h  my_chat  my_chat.cpp  my_chat.h  my_chat.kdev4  my_chat.moc  server.cpp  startup_server.cpp  startup_server.h  user.cpp  user.h  user_chat.cpp  user_chat.h
.kdev4/: my_chat.kdev4
